# tasktriage

./: .bumpversion.toml  .env.template  README.md  Taskfile.yml  analyze_tasks.py  config.yaml  pyproject.toml  streamlit_app.py
.task/checksum/: install
prompts/: daily.txt  weekly.txt
tasker/: __init__.py  cli.py  config.py  files.py  gdrive.py  image.py  prompts.py
tasktriage/: __init__.py  analysis.py  cli.py  config.py  files.py  gdrive.py  image.py  oauth.py  prompts.py
tasktriage/streamlit_ui/: __init__.py  components.py  config_ui.py  file_ops.py  logic.py  oauth_ui.py  panels.py  state.py  styles.py
tests/: __init__.py  conftest.py  test_analysis.py  test_cli.py  test_config.py  test_files.py  test_gdrive.py  test_image.py  test_prompts.py
