[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tasker"
version = "0.1.0"
description = "Analyzes handwritten task notes from a note-taking device using Claude AI to generate actionable GTD-based execution plans."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langchain-anthropic>=0.3.0",
    "langchain-core>=0.3.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
    "google-api-python-client>=2.100.0",
    "google-auth>=2.23.0",
]

[project.scripts]
analyze-tasks = "tasker:main"
tasker = "tasker:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
]
